# msp

./: LICENSE  README.md  flexbison.h
doc/: devlog.md  internals.md  introduction.md  puretext.md  test.md
src/: CMakeLists.txt  aset.c  bitmapset.c  copyfuncs.c  dynahash.c  equalfuncs.c  globals.c  hashfn.c  list.c  main.cpp  mcxt.c  md.l  md.y  msp.h  msp_common.h  nodes.c  pg_leftmost_one_pos.c  stringinfo.c  strlcpy.c  svg.y
src/arch/android/: README.md
src/arch/ios/: README.md
src/arch/macos/: README.md
src/arch/windows/: CMakeLists.txt  D2DSvg.hpp  MainFrm.h  README.md  TextRender.cpp  View.h  msp.cpp  msp.h  msp.rc  mspwin.h  resource.h  stdafx.cpp  stdafx.h  threadrender.cpp  threadwin.h
src/font/: CMakeLists.txt  font.c  font.h  unicode.c  unicode.h
src/gif/: CMakeLists.txt  decode_gif.c  libnsgif.c  libnsgif.h
src/include/: attnum.h  c.h  elog.h  hashfn.h  hsearch.h  memnodes.h  memutils.h  miscadmin.h  msp.h  nodes.h  palloc.h  pg_bitutils.h  pg_config_manual.h  pg_list.h  port.h  postgres.h  s_lock.h  stringinfo.h  svgnodes.h
src/md/: CMakeLists.txt  md.c  md.h  md.l
src/pgcore/: CMakeLists.txt  aset.c  base64.c  bitmapset.c  copyfuncs.c  dynahash.c  equalfuncs.c  globals.c  hashfn.c  list.c  mcxt.c  nodes.c  pg_leftmost_one_pos.c  stringinfo.c  wchar.c
src/pgcore/include/: base64.h  bitmapset.h  elog.h  flexbison.h  hashfn.h  hsearch.h  mdnodes.h  memdebug.h  memnodes.h  nodes.h  pg_bitutils.h  pg_list.h  pg_wchar.h  pgcore.h  plannodes.h  postgres_ext.h  s_lock.h  spin.h
src/png/: CMakeLists.txt  spng.c
src/svg/: .example.cpp.swp  CMakeLists.txt  example.cpp  interval.hpp  lunasvg.h  lunasvg_export.h  plutosvg.c  plutosvg.h  plutovg.c  rect.hpp  sort.pl  stb_image_write.c  stb_image_write.h  svg.h  svg.hpp  svg.l  svgkw.txt  svgkwlist.h  svgkwlist_d.h
